--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <h4>Nothing &nbsp; Support</h4>
             
             <br>
-            <h1>our new <br>sipport <br>services</h1>
+            <h1>our new <br>support <br>services</h1>
             <p>We’ve completely redesigned our support<br> services. More agents, new ways to contact us,<br> device repairs and a brand new support portal.<br>
 
                 To fully take care of our Phone (1)<br> experience.</p>
